[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qinvaders"
authors = [{name = "Pablo Cárdenas", email = "pablo.cardenas@imca.edu.pe"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pygame",
    "numpy",
    "qiskit",
]

[project.urls]
Home = "https://github.com/pablo-cardenas/QInvaders"

[project.scripts]
qinvaders = "qinvaders.main:main"
